# picow_ble_nordic_spp

./: CMakeLists.txt  README.md  blink.c
flutter/: blecontroller.dart  main.dart
